--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
 cachelib==0.2.0
+cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.3
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
 Flask-Session==0.4.0
+google-api-core==1.31.1
+google-auth==1.34.0
+google-cloud-vision==2.4.2
+googleapis-common-protos==1.53.0
+grpcio==1.39.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+packaging==21.0
 pifx==1.0.1
+proto-plus==1.19.0
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
 python-dotenv==0.19.0
+pytz==2021.1
 requests==2.26.0
+rsa==4.7.2
 six==1.16.0
 spotipy==2.18.0
 urllib3==1.26.6
