--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==0.7.0
 aiohttp==3.7.4.post0
 asgiref==3.4.1
 async-timeout==3.0.1
@@ -11,6 +12,7 @@ charset-normalizer==2.0.3
 click==8.0.1
 colorama==0.4.4
 colormath==3.0.0
+fastapi==0.68.0
 Flask==2.0.1
 Flask-Session==0.4.0
 google-api-core==1.31.1
@@ -19,6 +21,8 @@ google-cloud-vision==2.4.2
 googleapis-common-protos==1.53.0
 grpcio==1.39.0
 h11==0.12.0
+httpcore==0.12.3
+httpx==0.17.1
 idna==3.2
 ifaddr==0.1.7
 itsdangerous==2.0.1
@@ -29,7 +33,7 @@ multidict==5.1.0
 networkx==2.6.2
 numpy==1.21.1
 packaging==21.0
--e git+ssh://git@github.com/grahamhome/pifx.git@1f84d7d13dbbcbdd4530bdf4c7699a8c317a657b#egg=pifx
+-e git+ssh://git@github.com/grahamhome/pifx.git@fddabb62d3330faae498be1d89164dd80ebe8b7a#egg=pifx
 proto-plus==1.19.0
 protobuf==3.17.3
 pyasn1==0.4.8
@@ -40,9 +44,13 @@ python-dotenv==0.19.0
 pytz==2021.1
 requests==2.26.0
 requests-futures==1.0.0
+rfc3986==1.5.0
 rsa==4.7.2
 six==1.16.0
+sniffio==1.2.0
 spotipy==2.18.0
+starlette==0.14.2
+tekore==3.7.1
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 uvicorn==0.15.0
